<resources>
    <string name="app_name">MyCalculator</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_mainActivity_info">Elija un tipo de calculadora</string>
    <string name="btn_mainActivity_simpleCalculator">Calculadora Simple</string>
    <string name="btn_mainActivity_complexCalculator">Calculadora Compleja</string>
    <string name="tv_simpleCalculator_num1">Número 1:</string>
    <string name="et_simpleCalculator_operando1">Introduzca primer número</string>
    <string name="tv_simpleCalculator_num2">Número 2:</string>
    <string name="et_simpleCalculator_operando2">Introduzca segundo número</string>
    <string name="tv_simpleCalculator_infoResultado">Resultado:</string>
    <string name="toast_simpleCalculator_faltaNum">Falta un operando por introducir</string>
    <string name="dialog_title">Resultado</string>
    <string name="dialog_message">Resultado de la operación: </string>
    <string name="dialog_possitiveButton">Vale</string>
    <string name="et_fragmentCalculator_inputNumber">Introduzca un número</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_calculator">CalculatorActivity</string>
</resources>
