<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SimpleCalculatorFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/tv_simpleCalculator_num1" />

        <EditText
            android:id="@+id/et_simpleCalculator_operando1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/et_simpleCalculator_operando1"
            android:inputType="number"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/tv_simpleCalculator_num2" />

        <EditText
            android:id="@+id/et_simpleCalculator_operando2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/et_simpleCalculator_operando2"
            android:inputType="number"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/tv_simpleCalculator_infoResultado" />

        <TextView
            android:id="@+id/tv_simpleCalculator_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/fab_margin"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_simpleCalculator_sumar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="+"
            android:textSize="@dimen/fab_margin"/>

        <Button
            android:id="@+id/btn_simpleCalculator_restar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="-"
            android:textSize="@dimen/fab_margin"/>

        <Button
            android:id="@+id/btn_simpleCalculator_multiplicar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="*"
            android:textSize="@dimen/fab_margin"/>

        <Button
            android:id="@+id/btn_simpleCalculator_dividir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="/"
            android:textSize="@dimen/fab_margin"/>

        <Button
            android:id="@+id/btn_simpleCalculator_igual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="="
            android:textSize="@dimen/fab_margin"/>

    </LinearLayout>


</LinearLayout>